--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+eslint.config.js
 node_modules
+public
 dist
 dist-ssr
 *.local
@@ -22,3 +23,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+package.json
+package-lock.json
+postcss.config.json
+README.md
+tsconfig.app.json
+tsconfig.node.json
+vite.config.js
+eslint.config.js
